--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -4,6 +4,9 @@
 	ViewData["Title"] = "Index Categories";
 }
 <h1>Index Categories</h1>
+<p>
+    <a asp-page="Create" class="btn btn-success">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
