--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -25,7 +25,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Description)</td>
 
                 <td>
-                    <span></span>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
