--- a/Pages/Products/Index.cshtml
+++ b/Pages/Products/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Index Products";
 }
 <h1>Index Products</h1>
+<p>
+    <a asp-page="Create" class="btn btn-success">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -28,3 +31,4 @@
             </tr>
         }
     </tbody>
+</table>
