--- a/Pages/Products/Index.cshtml
+++ b/Pages/Products/Index.cshtml
@@ -26,7 +26,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Stock)</td>
 
                 <td>
-                   <span></span>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
