--- a/Pages/Providers/Index.cshtml
+++ b/Pages/Providers/Index.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Index Providers";
 }
 <h1>Index Providers</h1>
-
+<p>
+    <a asp-page="Create" class="btn btn-success">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
