--- a/Pages/Providers/Index.cshtml
+++ b/Pages/Providers/Index.cshtml
@@ -32,7 +32,7 @@
                 <td>@Html.DisplayFor(modelItem => item.State)</td>
 
                 <td>
-                   <span></span>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
 
 
