--- a/Pages/PayModes/Index.cshtml
+++ b/Pages/PayModes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index PayModes";
 }
 <h1>Index PayMode</h1>
-
+<a asp-page="Create" class="btn btn-success">Create New</a>
 <table class="table">
     <thead>
         <tr>
