--- a/Pages/PayModes/Index.cshtml
+++ b/Pages/PayModes/Index.cshtml
@@ -23,6 +23,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Observation)</td>
 
                 <td>
+                    <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a>
                     <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
