--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <form method="post">
-    <div class="mb-3" asp-validation-summary="ModelOnly"></div>
+    <div class="text-danger" asp-validation-summary="ModelOnly"></div>
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control"
