autenticacion con bd

--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -7,20 +7,20 @@
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control"
-               asp-for="User.Email"
+               asp-for="Email"
                id="exampleInputEmail1" aria-describedby="emailHelp">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         <div>
-            <span class="text-danger" asp-validation-for="User.Email"></span>
+            <span class="text-danger" asp-validation-for="Email"></span>
         </div>
     </div>
     <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Password</label>
         <input type="password" class="form-control"
-               asp-for="User.Password"
+               asp-for="Password"
                id="exampleInputPassword1">
         <div>
-            <span class="text-danger" asp-validation-for="User.Password"></span>
+            <span class="text-danger" asp-validation-for="Password"></span>
         </div>
     </div>
     <div class="mb-3 form-check">
